fix resize stretching buge

--- a/src/components/modals/LoginModal.module.css
+++ b/src/components/modals/LoginModal.module.css
@@ -23,8 +23,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-
-    position: relative;
 }
 
 .characterContainer {
